# arthurian-league

./: README-kedro.md  README-project.md  README.md  pyproject.toml  requirements.txt  session_store.db
.viz/: stats.json
ALvenv/: pyvenv.cfg
ALvenv/Scripts/: activate  activate.bat  jsonpointer  pygrun
archive/data/: fixture_data.csv  grouped_ALFIE_fixtures.csv  merged_ALFIE_fixtures.csv  stacked_ALFIE_fixtures.csv
archive/notebooks/: ALresults.ipynb  ALupdated.ipynb
archive/transformations/: transformations.py
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/: ALanalysis.ipynb  ALupdated.ipynb  group_fixtures.ipynb  test_merge.ipynb
src/arthurian_league/: __init__.py  __main__.py
src/arthurian_league/old_code/notebooks/: ALanalysis.ipynb  ALkedrotesting.ipynb
src/arthurian_league/old_code/scraping/: web_scraping.py
src/arthurian_league/pipelines/ALFIE/: nodes.py  pipeline.py
src/arthurian_league/pipelines/group_fixtures/: nodes.py  pipeline.py
src/arthurian_league/pipelines/save_season_ids/: nodes.py  pipeline.py
src/arthurian_league/pipelines/scrape_fixture_data/: nodes.py  pipeline.py
src/arthurian_league/pipelines/transform_fixture_data/: nodes.py  pipeline.py
src/arthurian_league/pipelines/transfrom_fixture_data/: nodes.py  pipeline.py
